# Verdictflow

./: .gitignore  README.md  VerdictFlow_AntiGravity_Build_Prompt.md  VerdictFlow_Master_Build_Prompt_ENHANCED.md  _temp_case_page.tsx  _temp_page.tsx  docker-compose.yml
_temp_components/: agent-progress.tsx  audit-chain.tsx  finding-card.tsx  redline-diff.tsx  upload-zone.tsx
_temp_lib/: api.ts  use-sse.ts
backend/: .env.example  Dockerfile  main.py  pyproject.toml  railway.toml
backend/agents/: __init__.py  adjudicator.py  clause_analyst.py  compliance_agent.py  financial_risk_agent.py  intake_agent.py  orchestrator.py  red_team_agent.py  redline_agent.py
backend/api/: __init__.py  compare.py  features.py  negotiate.py  routes.py  sse.py
backend/band/: __init__.py  client.py  events.py
backend/core/: __init__.py  audit_packager.py  chunker.py  llm.py  parser.py  vectorstore.py
backend/models/: __init__.py  audit.py  schemas.py
backend/tests/: __init__.py  band_integration.py  smoke_phases.py  test_core.py
backend/uploads/: 0322ec21-ca49-47c1-ad63-47866dcbbdc3.txt  3aa4af8e-b092-4256-9dda-1dd3567b6b2a.txt  88cb905e-4695-42f7-bb3a-7359386b9788.txt  fb467790-6204-4c5d-83e5-dbc09f0285ef.txt
backend/utils/: __init__.py  observability.py
contracts/: sample_lease.txt
docs/: DEMO_SCRIPT.md  SUBMISSION_DESCRIPTION.md  architecture.md
frontend/: package-lock.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/cases/[id]/: page.tsx
frontend/components/: agent-boardroom.tsx  agent-feed.tsx  agent-progress.tsx  audit-chain.tsx  audit-verify.tsx  band-agents.tsx  contract-chat.tsx  finding-card.tsx  live-boardroom.tsx  money-hero.tsx  negotiate-tab.tsx  redline-diff.tsx  risk-gauge.tsx  risk-radar.tsx  status-badge.tsx  upload-zone.tsx  version-compare.tsx
frontend/lib/: api.ts  use-sse.ts
memory/: MEMORY.md  verdictflow-band-agents.md  verdictflow-frontend-api-fixes.md  verdictflow-runtime-setup.md
