[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdictflow-backend"
version = "0.1.0"
description = "VerdictFlow — Multi-Agent Contract Intelligence System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ── Web Framework ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",

    # ── Agent Frameworks ──
    "band-sdk[langgraph]>=0.1.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "crewai>=0.80.0",
    "pydantic-ai>=0.0.30",

    # ── LLM Clients ──
    "anthropic>=0.39.0",
    "openai>=1.50.0",

    # ── Vector Store ──
    "qdrant-client>=1.12.0",

    # ── Document Processing ──
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",

    # ── Observability ──
    "agentops>=0.3.0",

    # ── Utilities ──
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
